[tool.poetry]
name = "gsamil-test"
version = "0.1.0"
description = "This is a test python package I created to learn pip&poetry"
authors = ["gsamil <abdullah-s-guser@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "7.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
