[tool.poetry]
name = "gsamil-test"
version = "0.1.0"
homepage = "https://github.com/gsamil/sample-pypi"
description = "This is a test python package I created to learn pip&poetry"
authors = ["gsamil <abdullah-s-guser@hotmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "7.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
